# align-scenario-gen

./: .gitignore  README.md  config.yaml  convert_examples.py  example_config.yaml  example_config_local.yaml  pyproject.toml  run_bloom.py
align_scenario_gen/: bloom_runner.py  cli.py  config.py  convert.py  convert_examples.py  generate.py  local_llm.py  parse.py  prompt.py
bloom-data/: behaviors.json  seed.yaml
bloom-data/behaviors/examples/merit-based-triage/: example1.json  example6.json
